changed some dummy data and added exceptions